# project-r

./: .gitignore  CLAUDE.md  DEVELOPMENT_GUIDE.md  README.md  bun.lock.backup  package.json  turbo.json
apps/apps/desktop/src-tauri/icons/: placeholder.txt
apps/desktop/: index.html  package.json  tailwind.config.js  vite.config.ts  vite.config.ts.backup
apps/desktop/src/: App-simple.tsx  App.tsx  Home.tsx  Practice.tsx  Session.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio.rs  database.rs  interactive_python.rs  llm.rs  main.rs  practice_sheet.rs  session_summary.rs  tts.rs  whisper.rs
apps/desktop/src/components/: CodeEditor.tsx
apps/web/: .env.example  index.html  localhost-key.pem  localhost.pem  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/api/: practice-generate.ts  session-summary.ts
apps/web/src/: App.tsx  vite-env.d.ts
apps/web/src/components/: Home.tsx  Practice.tsx  Session.tsx
apps/web/src/services/: index.ts  judge0.ts  openRouter.ts  speech.ts  storage.ts
apps/web/src/stores/: appStore.ts
apps/web/src/types/: global.d.ts  index.ts
